MMA-8135 rydd opp i exceptionhandling, lag flere tester for diverse utfall av kall mot PDL
- flere tester for responser fra PDL
- penere formatering av graphql-queryene
- setter ikke nav-call-ID-header
- memoiserer validering av scope i NaisTexasConsumer

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>